# cmake-c-cpp-library-template

./: CMakeLists.txt  ProjectTest.cmake  README.md
doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt  func.c  func.h  main.c
